@@ -2,6 +2,10 @@
 CHANGES
 =======
 
+
+- Added applyChanges method to subform
+
+
 1.3.2 (2009-01-22)
 ------------------
 
